Lager historikkinslag for BekreftSøkersOpplysningspliktManuellOppdaterer